fixed layout issues at 1440px screen size

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -58,6 +58,10 @@ body {
     margin-bottom: map-get($margin-bottom, 'xxxxl');
   }
 
+  h1 {
+    opacity: $header-opacity;
+  }
+
   h2 {
     margin-bottom: 1.5rem;
     opacity: $header-opacity; 
@@ -81,7 +85,7 @@ body {
     color: white;
     font-weight: 600;
     letter-spacing: 1.5px;
-
+    max-width: 25rem;
   }
 
   .--btn-a {
@@ -249,6 +253,8 @@ footer {
       grid-column: 1 / span 12;
       display: grid;
       grid-template-columns: repeat(12, 1fr);
+      max-width: 88rem;
+      margin: 0 auto;
 
       h1 {
         font-size: 3rem;
@@ -268,25 +274,25 @@ footer {
       }
 
       .--btn {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
       }
     }
 
     .__btn-container {
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
       max-width: 50rem;
       margin: 0 auto;
     }
 
     .--btn {
-      width: 100%;
-      margin: 2.5rem;
+      width: 40%;
+      margin: 0.5rem;
     }
   }
 
   .header {
-    grid-column: 4 / span 6;
+    grid-column: 3 / span 8;
   }
 
   .section-1 {
@@ -316,7 +322,7 @@ footer {
   }
 
   .section-2 {
-    grid-column: 4 / span 6;
+    grid-column: 3 / span 8;
   }
 
   .section-3 {
@@ -326,6 +332,7 @@ footer {
     &__partners {
       display: flex;
       justify-content: space-between;
+      align-items: center;
     }
 
     .fas {
@@ -333,7 +340,7 @@ footer {
     }
 
     .__partners-logo {
-      width: 15rem;
+      min-width: 10rem;
     }
   }
 
@@ -342,7 +349,11 @@ footer {
   }
 
   .section-4 {
-    grid-column: 4 / span 6;
+    grid-column: 3 / span 8;
+    
+    &__paragraph {
+      margin-bottom: map-get($margin-bottom, 'm' );
+    }
   }
 
   footer {
